# multiarch_solver

./: CLAUDE.md  Cargo.toml  README.md  random_r.c
solver/: Cargo.toml
solver/src/: .stack_decoder.rs.swp  dispatcher.rs  main.rs  reg_decoder.rs  stack_decoder.rs
src/: dispatcher.rs  main.rs  stackvm.rs
symbex/: Cargo.toml
symbex/src/: .symbex_engine.rs.swp  lib.rs  symbex_engine.rs  symbex_vm.rs  z3_lcg.rs
